# libicu_full

branches/9717disablecxx11/source/: configure.in
branches/agousev/patch7067/source/: aclocal.m4
branches/agousev/patches/source/: aclocal.m4  configure.in
branches/andy/10764/: APIChangeReport.html
branches/andy/4016/source/: configure  configure.in
branches/andy/4790/source/: configure  configure.in
branches/andy/6910-testfw/source/: aclocal.m4  configure
branches/bing/source/samples/: rules.mk
branches/branch-release-1-4-1-2/source/: runConfigureICU
branches/branch-release-1-4-1-2/source/common/: putil.c  ucnv_io.c
branches/deb/: gendict.cpp  spooftest.c
branches/eric/csre/source/: configure
branches/eric/lenient_number_parsing/source/: runConfigureICU
branches/grhoten/9469/source/: aclocal.m4  configure  runConfigureICU
branches/jchye/newldml2icu/data/: build.xml
branches/kirtig/source/i18n/: Makefile.in  msgfmt.cpp  selfmt.cpp  selfmtimpl.h
branches/maf/source/: LDML2ICUConverter.java.patch
branches/maf/source/i18n/: coll.cpp  tblcoll.cpp  ucol.cpp  ucol_imp.h  ucol_res.cpp  ucol_sit.cpp  ucol_tok.cpp  ucol_tok.h
branches/markus/collv2/: readme.html
branches/markus/msg48/: readme.html
branches/markus/smallres/: chars-stats.py  keys-stats.py  potential-stats.py  smallres-notes.txt  stringcache.cpp
branches/markus/smallres2/: smallres-notes.txt
branches/markus/uts46/: uts46demo.cpp
branches/mishonok/i18n_lazyZoneStr/: zstrfmt.h
branches/release-3-2-1-branch/: readme.html
branches/release-3-2-1-branch/source/: configure
branches/release-3-4-1-branch/: readme.html
branches/release-3-4-1-branch/source/: configure  configure.in
branches/srl/10394promo52/: APIChangeReport.html
branches/srl/11023layoutexCMAKE/source/layoutex/: CMakeLists.txt  Makefile.in  ParagraphLayout.cpp  README.md  icu-lx.pc  layoutex.vcxproj
branches/srl/7747cmake/: readme-cmake.txt
branches/srl/7747cmake/source/common/: CMakeLists.txt
branches/srl/7747cmake/source/i18n/: CMakeLists.txt
branches/srl/7747cmake/source/io/: CMakeLists.txt
branches/srl/7747cmake/source/layoutex/: CMakeLists.txt
branches/srl/7747cmake/source/samples/udata/: CMakeLists.txt
branches/srl/7747cmake/source/samples/uresb/: CMakeLists.txt
branches/srl/7747cmake/source/test/: CMakeLists.txt
branches/srl/7747cmake/source/test/depstest/: dependencies.py  dependencies.txt  gencmake.py
branches/srl/7747cmake/source/test/intltest/: CMakeLists.txt
branches/srl/7747cmake/source/tools/: CMakeLists.txt
branches/srl/7747cmake/source/tools/genbrk/: CMakeLists.txt
branches/srl/7747cmake/source/tools/gennorm2/: CMakeLists.txt
branches/srl/7747cmake/source/tools/genrb/: CMakeLists.txt
branches/srl/7747cmake/source/tools/gensprep/: CMakeLists.txt
branches/srl/7747cmake/source/tools/gentest/: CMakeLists.txt
branches/srl/7747cmake/source/tools/icupkg/: CMakeLists.txt
branches/srl/7747cmake/source/tools/icuswap/: CMakeLists.txt
branches/srl/7747cmake/source/tools/pkgdata/: CMakeLists.txt
branches/srl/7747cmake/source/tools/toolutil/: CMakeLists.txt
branches/srl/config8732/: readme.html
branches/srl/i8784_m48/: readme.html
branches/srl/ibmi/: readme.html
branches/srl/uset7689/: junkytest.txt
branches/srl/ver8028/: readme.html
branches/tkeep/cdf/: readme.html
branches/wmason/cmake7747-2/source/data/: BuildIcuData.cmake  CMakeLists.txt
branches/wmason/cmake7747-2/source/i18n/: CMakeLists.txt
branches/wmason/cmake7747-2/source/layout/: CMakeLists.txt
branches/wmason/cmake7747-2/source/samples/layout/: CMakeLists.txt
branches/wmason/cmake7747-2/source/test/iotest/: CMakeLists.txt
branches/wmason/cmake7747-2/source/tools/gencfu/: CMakeLists.txt
branches/wmason/cmake7747-2/source/tools/gencmn/: CMakeLists.txt
branches/wmason/cmake7747-2/source/tools/genctd/: CMakeLists.txt
branches/wmason/cmake7747/source/: CMakeLists.txt
branches/wmason/cmake7747/source/cmake-modules/: Configure.cmake  IcuLibrary.cmake
branches/wmason/cmake7747/source/common/: CMakeLists.txt
branches/wmason/cmake7747/source/data/: CMakeLists.txt
branches/wmason/cmake7747/source/i18n/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/break/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/cal/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/case/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/citer/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/coll/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/csdet/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/layout/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/numfmt/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/ucnv/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/ufortune/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/ufortune/resources/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/ugrep/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/uresb/: CMakeLists.txt
branches/wmason/cmake7747/source/samples/ustring/: CMakeLists.txt
branches/wmason/cmake7747/source/stubdata/: CMakeLists.txt
branches/wmason/cmake7747/source/test/: CMakeLists.txt
branches/wmason/cmake7747/source/test/cintltst/: CMakeLists.txt
branches/wmason/cmake7747/source/test/intltest/: CMakeLists.txt
branches/wmason/cmake7747/source/test/iotest/: CMakeLists.txt
branches/wmason/cmake7747/source/test/letest/: CMakeLists.txt
branches/wmason/cmake7747/source/tools/: CMakeLists.txt
branches/wmason/cmake7747/source/tools/genccode/: CMakeLists.txt
branches/wmason/cmake7747/source/tools/gencfu/: CMakeLists.txt
branches/wmason/cmake7747/source/tools/gencnval/: CMakeLists.txt
branches/wmason/cmake7747/source/tools/genrb/: CMakeLists.txt
branches/wmason/cmake7747/source/tools/makeconv/: CMakeLists.txt
branches/wmason/cmake7747/source/tools/toolutil/: CMakeLists.txt
branches/yoshito/apipromo54/: APIChangeReport.html
(+5109 files in other folders)
