ADD_DEFINITIONS(-DU_LAYOUTEX_IMPLEMENTATION)
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")
ICU_LIBRARY(${LAYOUTEX_STUB}
    LXUtilities.cpp LXUtilities.h ParagraphLayout.cpp RunArrays.cpp playout.cpp plruns.cpp
    ICU_LINK_LIBRARIES
    ${LAYOUT_STUB})

INSTALL_ICU_LIBRARY(${LAYOUTEX_STUB})
INSTALL(DIRECTORY layout
        DESTINATION ${INCLUDE_DIR}
        FILE_PERMISSIONS OWNER_READ OWNER_WRITE GROUP_READ WORLD_READ
        PATTERN ".svn" EXCLUDE)

